List events and add tailwind css

--- a/src/app/components/events/event-list/event-list.component.html
+++ b/src/app/components/events/event-list/event-list.component.html
@@ -1,1 +1,37 @@
-<p>event-list works!</p>
+<div class="bg-white">
+    <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+      <h1 class="text-5xl font-bold tracking-tight text-gray-900 text-center">All Events</h1>
+  
+      <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+
+        <!-- Iterar sobre los eventos -->
+        @for (event of eventList; track $index) {
+
+            <div class="group relative">
+                <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                  <!-- Imagen del evento -->
+                  <img [src]="'data:image/jpeg;base64,' + event.eventImage" [alt]="event.name" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                </div>
+                <div class="mt-4 flex justify-between">
+                  <div>
+                    <!-- Nombre del evento -->
+                    <h3 class="text-sm text-gray-700">
+                      <a href="#">
+                        <span aria-hidden="true" class="absolute inset-0"></span>
+                        {{ event.name }}
+                      </a>
+                    </h3>
+                    <!-- Lugar y fecha del evento -->
+                    <p class="mt-1 text-sm text-gray-500">{{ event.place }} - {{ event.date }}</p>
+                  </div>
+                  <!-- Precio del evento -->
+                  <p class="text-sm font-medium text-gray-900">{{ event.price }}</p>
+                </div>
+            </div>
+
+        }
+
+      </div>
+    </div>
+  </div>
+  
