--- a/src/app/components/events/event-list/event-list.component.html
+++ b/src/app/components/events/event-list/event-list.component.html
@@ -1,50 +1,38 @@
 <div class="bg-white">
-    <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+  <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
       <h1 class="text-5xl font-bold tracking-tight text-gray-900 text-center">All Events</h1>
 
       <div class="flex items-center space-x-2 mt-4">
-        <a class="flex items-center text-blue-600 hover:text-blue-800 text-lg" routerLink="add-event">
-            <span class="iconify mr-2" data-icon="carbon:add-filled" style="font-size: 24px;"></span>
-            <span class="font-semibold">Add New Event</span>
+        <a routerLink="add-event" class="flex items-center">
+            <span class="iconify" data-icon="gg:add" style="font-size: 24px;"></span>
+            <p class="text-lg font-semibold ml-3" >Add New Event</p>
         </a>
       </div>
- 
-      <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:gap-x-8">
 
-        @for (event of eventList; track $index) {
-    
-            <div class="group relative border border-gray-300 rounded-lg shadow-md overflow-hidden transition-transform duration-200 transform hover:scale-105 p-4">
-                <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <!-- Imagen del evento -->
-                    <img [src]="'data:image/jpeg;base64,' + event.eventImage" [alt]="event.name" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                </div>
-                <div class="mt-4 flex justify-between">
-                    <div class="pr-4">
-                        <!-- Nombre del evento -->
-                        <h3 class="text-lg font-semibold text-gray-700">
-                            <a>
-                                <span aria-hidden="true" class="absolute inset-0"></span>
-                                {{ event.name }}
-                            </a>
-                        </h3>
-                        <!-- Lugar y fecha del evento -->
-                        <p class="mt-1 text-sm text-gray-500">{{ event.place }} - {{ event.date }}</p>
-                    </div>
-                    <!-- Precio del evento -->
-                    <p class="text-lg font-medium text-gray-900">{{ event.price }} €</p>
-                </div>
-    
-                <div class="flex space-x-3 mt-4">
-                  <button type="button" class="flex-grow text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-2.5">Details</button>
-                  <button type="button" class="flex-grow text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5">Delete</button>
-                  <button type="button" class="flex-grow text-white bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5">Modify</button>
-                </div>
-            </div>
-    
-        }
-    
+      <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:gap-x-8">
+          @for (event of eventList; track $index) {
+              <div class="border border-gray-300 rounded-lg shadow-md overflow-hidden p-4">
+                  <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden bg-gray-200 lg:aspect-none">
+                      <!-- Imagen del evento. La cadena data:image/jpeg;base64, indica al navegador que el contenido es una imagen jpg codificada en base64, es encesario para que el navegador interprete los datos de ka imagen correctamente -->
+                      <img [src]="'data:image/jpeg;base64,' + event.eventImage" [alt]="event.name" class="h-full w-full object-cover object-center lg:h-80 lg:w-full">
+                  </div>
+                  <h3 class="text-lg font-semibold text-gray-700 mb-2">{{ event.name }}</h3>
+                  <p class="text-sm text-gray-500 mb-4">{{ event.place }} - {{ event.date }}</p>
+                  <p class="text-lg font-medium text-gray-900 mb-4">{{ event.price }} €</p>
+
+                  <div class="flex space-x-3">
+                      <button class="flex-grow text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2">
+                          Details
+                      </button>
+                      <button class="flex-grow text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2" (click)="deleteEvent(event.id)">
+                          Delete
+                      </button>
+                      <button class="flex-grow text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-4 py-2">
+                          Modify
+                      </button>
+                  </div>
+              </div>
+          }
       </div>
-    
-    </div>
   </div>
-  
+</div>
