--- a/src/app/components/events/event-list/event-list.component.html
+++ b/src/app/components/events/event-list/event-list.component.html
@@ -27,7 +27,7 @@
                       <button class="flex-grow text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2" (click)="deleteEvent(event.id)">
                           Delete
                       </button>
-                      <button class="flex-grow text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-4 py-2">
+                      <button class="flex-grow text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-4 py-2" [routerLink]="['modify-event', event.id]">
                           Modify
                       </button>
                   </div>
