--- a/src/app/admin/components/event-list/event-list.component.html
+++ b/src/app/admin/components/event-list/event-list.component.html
@@ -3,7 +3,7 @@
       <h1 class="display-4 text-center font-weight-bold mb-4">All Events</h1>
   
       <div class="d-flex justify-content-center mb-4">
-        <a routerLink="/add-event" class="btn btn-primary d-flex align-items-center">
+        <a routerLink="add-event" class="btn btn-primary d-flex align-items-center">
           <span class="ml-2">Add New Event</span>
         </a>
       </div>
