--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 
 <div class="min-vh-100 d-flex flex-column">
-  <header class="bg-primary text-white py-4 shadow">
+  <header class="bg-dark text-white py-4 shadow">
     <div class="container d-flex justify-content-between align-items-center">
       <h1 class="h3 fw-bold">Event Sportive Gestor</h1>
-
+  
       <nav>
         <ul class="nav">
           <li class="nav-item">
