--- a/src/app/user/components/event-list-for-users/event-list-for-users.component.html
+++ b/src/app/user/components/event-list-for-users/event-list-for-users.component.html
@@ -1,8 +1,39 @@
 <app-header-user></app-header-user>
-<div>carrusel de fotos</div>
 
-<div>
-    <h2>Listado de eventos</h2>
-    <div>Eventos en cuestion</div>
-</div>
+<section class="carousel">
+    <div class="carousel-wrapper">
+        <app-carousel></app-carousel>
+    </div>
+</section>
 
+<section class="events container mt-5">
+  <div class="row">
+    <div class="col-12">
+      <h2 class="text-center">Listado de eventos</h2>
+    </div>
+  </div>
+  <div class="row justify-content-between mt-3">
+    <div class="col-md-4 mb-3">
+      <div class="form-group">
+        <label for="categoryFilter">Buscador por categorías</label>
+        <select id="categoryFilter" class="form-control">
+          <option value="all">Todas las categorías</option>
+          <option value="category1">Categoría 1</option>
+          <option value="category2">Categoría 2</option>
+        </select>
+      </div>
+    </div>
+    <div class="col-md-8">
+      <div class="event-list">
+        <div class="event-item mb-4">
+          <h5>Evento 1</h5>
+          <p>Descripción del evento 1...</p>
+        </div>
+        <div class="event-item mb-4">
+          <h5>Evento 2</h5>
+          <p>Descripción del evento 2...</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
