--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'bootstrap/dist/css/bootstrap.min.css';
+
+body {
+    background: linear-gradient(to right, #ff512f, #f09819);
+    min-height: 100vh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
