Add Google Maps Api

--- a/src/app/shared/carousel/carousel.component.html
+++ b/src/app/shared/carousel/carousel.component.html
@@ -1,5 +1,5 @@
 <swiper-container style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="mySwiper"
-    thumbs-swiper=".mySwiper2" loop="true" space-between="10" navigation="true" autoplay-delay="3000" autoplay-disable-on-interaction="false">
+    thumbs-swiper=".mySwiper2" space-between="10" navigation="true" autoplay-delay="3000" autoplay-disable-on-interaction="false">
     @for (img of images; track $index) {
       <swiper-slide>
         <img [src]="img" />
@@ -7,7 +7,7 @@
     }
 </swiper-container>
 
-<swiper-container class="mySwiper2" loop="true" space-between="10" slides-per-view="3" free-mode="true"
+<swiper-container class="mySwiper2" space-between="10" slides-per-view="3" free-mode="true"
     watch-slides-progress="true">
     @for (img of images; track $index) {
       <swiper-slide>
