--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-
 <div class="min-vh-100 d-flex flex-column">
-  <header class="bg-dark text-white py-4 shadow">
+  <header class="w-100 bg-dark text-white py-4 shadow"> <!-- Ancho 100% -->
     <div class="container d-flex justify-content-between align-items-center">
-      <h1 class="h3 fw-bold">Event Sportive Gestor</h1>
+      <h1 class="h3 fw-bold">Event Gestor</h1>
   
       <nav>
         <ul class="nav">
@@ -14,15 +13,15 @@
     </div>
   </header>
 
-
-  <main class="flex-grow-1 container py-4">
-    <router-outlet></router-outlet>
+  <main class="flex-grow-1 w-100 py-4"> <!-- Ancho 100% -->
+    <div class="container">
+      <router-outlet></router-outlet>
+    </div>
   </main>
 
-
-  <footer class="bg-dark text-white py-4">
+  <footer class="w-100 bg-dark text-white py-4"> <!-- Ancho 100% -->
     <div class="container text-center">
-      <p class="mb-0">&copy; 2024 Event Sportive Gestor. Todos los derechos reservados.</p>
+      <p class="mb-0">&copy; 2024 Event Gestor. Todos los derechos reservados.</p>
     </div>
   </footer>
 </div>
