--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Evita que haya scroll horizontal innecesario */
+}
+
 body {
     background: linear-gradient(to right, #ff512f, #f09819);
     min-height: 100vh;
