--- a/src/app/user/components/event-list-for-users/event-list-for-users.component.html
+++ b/src/app/user/components/event-list-for-users/event-list-for-users.component.html
@@ -1,7 +1,7 @@
 
 <section class="carousel">
     <div class="carousel-wrapper">
-        mapa
+        <app-map [events]="events()"/>
     </div>
 </section>
 
