--- a/src/app/shared/map/map.component.css
+++ b/src/app/shared/map/map.component.css
@@ -1,3 +1,6 @@
-:host {
+::ng-deep .map-container {
   display: block;
+  width: 100% !important;
+  height: 100% !important;
+  position: relative !important;
 }
