Add filter for events

--- a/src/app/user/components/event-detail/event-detail.component.html
+++ b/src/app/user/components/event-detail/event-detail.component.html
@@ -1,6 +1,7 @@
 @if (event()) {
-    <section class="carousel-wrapper">
-        <app-map [singleEvent]="event()"/>
+    <section class="map-wrapper">
+      <!--
+        <app-map [singleEvent]="event()"/>-->
     </section>
 
     <section class="container mt-5">
