--- a/src/app/user/components/event-list-for-users/event-list-for-users.component.css
+++ b/src/app/user/components/event-list-for-users/event-list-for-users.component.css
@@ -1,4 +1,4 @@
-.carousel-wrapper {
+.map-wrapper {
   width: 85%;
   height: 500px;
   justify-self: center;
@@ -9,4 +9,15 @@
   border-radius: 10px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
   padding-bottom: 10px;
+}
+
+.categoryFilter {
+  background-color: rgba(255, 255, 255, 0.15); 
+  backdrop-filter: blur(10px); 
+  color: black; 
+  border: none; 
+  border-radius: 12px; 
+  padding: 1rem; 
+  font-size: 1.1rem; 
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
