--- a/src/app/user/components/event-detail/event-detail.component.html
+++ b/src/app/user/components/event-detail/event-detail.component.html
@@ -39,8 +39,21 @@
             </div>
       
             <div class="d-flex mt-4">
-              <button class="btn btn-primary flex-grow-1 mr-2" style="border-radius: 25px;">Register</button>
+              <button class="btn btn-primary flex-grow-1 mr-2" style="border-radius: 25px;" (click)="onRegister()">Register</button>
             </div>
+
+            @if (successMessageRegister()) {
+              <div  class="alert alert-success mt-4">
+                {{ successMessageRegister() }}
+              </div>
+            }
+            @if (errorMessageRegister()) {
+              <div class="alert alert-danger mt-4">
+                {{ errorMessageRegister() }}
+              </div>
+            }
+            @if (successMessageRegister() === null && errorMessageRegister() === null) {
+            }
           </div>
         </div>
     </section>
