Add register User modal and change some styles

--- a/src/app/user/components/modals/login/login.component.html
+++ b/src/app/user/components/modals/login/login.component.html
@@ -42,6 +42,14 @@
           class="btn btn-primary px-5 py-2" 
           style="background-color: #ff512f; border: none; border-radius: 25px;"> Login
         </button>
+        <button
+          role="button"
+          type="button" 
+          class="btn btn-primary px-5 py-2 ms-2" 
+          style="background-color: #ff512f; border: none; border-radius: 25px;"
+          (click)="registerNewUser()">
+          Register
+        </button>
       </div>
     </form>
   </div>
