--- a/src/app/user/components/modals/logout/logout.component.html
+++ b/src/app/user/components/modals/logout/logout.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header bg-light text-dark">
+<div class="modal-header bg-light text-dark mt-3">
     <h4 class="modal-title text-center w-100">Are you sure to Logout?</h4>
 </div>
   
