--- a/src/app/user/components/event-list-for-users/event-list-for-users.component.html
+++ b/src/app/user/components/event-list-for-users/event-list-for-users.component.html
@@ -1,8 +1,7 @@
 
 <section class="carousel">
     <div class="map-wrapper">
-      <!--
-        <app-map [events]="events()"/>-->
+        <app-map [events]="events()"/>
     </div>
 </section>
 
